# qt-music

./: .gitignore  CMakeLists.txt  CMakePresets.json  audio.cpp  audio.h  iplayer.cpp  iplayer.h  isong.cpp  isong.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  run.sh  utils.cpp  vcpkg.json
devscripts/: linux-deb-setup.sh  mac-setup.sh  run.sh
src/: main.cpp
src/extlib/: httplib.h  logger.hpp  miniaudio.h
src/modules/songs_manager/: audio.hpp  isong.cpp  song_listener.hpp  songs_manager.cpp  songs_manager.hpp
src/player/: audio.cpp  audio.hpp  iplayer.cpp  iplayer.hpp  isong.cpp  isong.hpp
src/service/: cover_art_api.cpp  cover_art_api.hpp  spotdl.cpp  spotdl.hpp  ytdlp.cpp  ytdlp.hpp
src/ui/: const.hpp  download_song_dialog.cpp  download_song_dialog.hpp  download_song_dialog.ui  empty_song_dir_dialog.cpp  empty_song_dir_dialog.hpp  emptysongdirdialog.ui  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  title_controller.cpp  title_controller.hpp
src/utils/: filesys.cpp  filesys.hpp  network.cpp  network.hpp  string.cpp  string.hpp  system.cpp  system.hpp  utils.cpp  utils.hpp
